@@ -12,7 +12,7 @@
  */
 
 /*
-  Copyright 2011-2015 Frederic Vincent, Thibaut Paumard
+  Copyright 2011-2016 Frederic Vincent, Thibaut Paumard
   
   This file is part of Gyoto.
   
@@ -83,6 +83,7 @@ class Gyoto::Astrobj::PageThorneDisk
   // -------------------------
  public:
   GYOTO_OBJECT;
+  GYOTO_OBJECT_THREAD_SAFETY;
 
   PageThorneDisk(); ///< Standard constructor
   
