@@ -7,7 +7,7 @@
  */
 
 /*
-    Copyright 2011-2015 Frederic Vincent, Thibaut Paumard
+    Copyright 2012-2016 Frederic Vincent, Thibaut Paumard
 
     This file is part of Gyoto.
 
@@ -70,6 +70,7 @@ class Gyoto::Astrobj::PatternDiskBB : public Astrobj::PatternDisk {
   // -------------------------
  public:
   GYOTO_OBJECT;
+  GYOTO_OBJECT_THREAD_SAFETY;
 
   PatternDiskBB(); ///< Standard constructor
   
