@@ -5,7 +5,7 @@
  */
 
 /*
-    Copyright 2011-2015 Thibaut Paumard, Frederic Vincent
+    Copyright 2011-2016 Thibaut Paumard, Frederic Vincent
 
     This file is part of Gyoto.
 
@@ -235,6 +235,7 @@ class Gyoto::Screen
 
  public:
   GYOTO_OBJECT;
+  GYOTO_OBJECT_THREAD_SAFETY;
 
   // Constructors - Destructor
   // -------------------------
