@@ -1,5 +1,5 @@
 /*
-  Copyright (c) 2012-2015 Frederic Vincent, Odele Straub, Thibaut Paumard
+  Copyright (c) 2012-2016 Frederic Vincent, Odele Straub, Thibaut Paumard
   This file is part of Gyoto.
   Gyoto is free software: you can redistribute it and/or modify
   it under the terms of the GNU General Public License as published by
@@ -151,6 +151,11 @@ PolishDoughnut::PolishDoughnut(const PolishDoughnut& orig) :
 }
 PolishDoughnut* PolishDoughnut::clone() const
 {return new PolishDoughnut(*this);}
+bool PolishDoughnut::isThreadSafe() const {
+  // spectrumBB_ is not a Property
+  return Standard::isThreadSafe()
+    && (!spectrumBB_ || spectrumBB_->isThreadSafe());
+}
 double PolishDoughnut::getL0() const { return l0_; }
 //void PolishDoughnut::setL0(double l0) { l0_ = l0; }
 double PolishDoughnut::getWsurface() const { return W_surface_; }
