@@ -5,6 +5,9 @@ NEXT  2016/12/10 API
      introduce the function Gyoto::requirePlugin() in addition to
      Gyoto::loadPlugin(). The subcontractor signature is changed to
      accept a second parameter, which breaks the API.
+   * New functionality: thread-unsafe classes declare themselves as
+     such, so that NThreads is ignored when multi-threading would
+     cause erroneous results.
 
 1.1.2 2016/12/10 FTR
    * New Metrics in stdplug: ChernSimons, RezzollaZhidenko.
